--- a/spring-boot-app/src/main/resources/templates/index.html
+++ b/spring-boot-app/src/main/resources/templates/index.html
@@ -9,13 +9,13 @@
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Demostrated CI/CD Pipeline using Jenkins</div></a>
+    <a class="navbar-brand" href="#">Rolling Dice SpringBoot Application</div></a>
 </nav>
 
 <main role="main" class="container">
     <div class="starter-template">
-        <h1 th:text="${title}">Default title.</h1>
-        <p th:text="${msg}">Default text.</p>
+        <h1 th:text="${title}"> HomePage</h1>
+        <p th:text="${msg}">Access app in /rolldice</p>
     </div>
 </main>
 
